Fixed a bug where the collection switcher icon is invisible when using a dark header bar

--- a/src/app/components/collection/collection.component.scss
+++ b/src/app/components/collection/collection.component.scss
@@ -12,7 +12,7 @@
     color: black !important;
 }
 
-.collection-collection-switcher .collection-switcher-button {
+.collection-collection-switcher .collection-switcher-button__icon {
     color: black !important;
 }
 
